- changed fetching logic to sort newer entries on top